--- a/docker_consumer/Dockerfile
+++ b/docker_consumer/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3
+FROM python:3.6
+MAINTAINER Lukas Pollmann "lukas.pollmann@outlook.com"
 ADD api_consumer.py /
 ADD requirements.txt /
 RUN  pip install -r requirements.txt
