--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -7,8 +7,14 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 variables:
-  imageName: 'your-container-image-name:$(build.buildId)'
+  imageName: 'classifier_api:$(build.buildId)'
 
 steps:
 - script: docker build -f Dockerfile -t $(imageName) .
   displayName: 'docker build'
+
+- script: docker login -u $(dockerId) -p $(dockerPassword)
+  displayName: 'login to docker hub'
+
+- script: docker push $(dockerId)/$(imageName)
+  displayName: 'push image to docker hub'
