--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -10,11 +10,10 @@ variables:
   imageName: 'classifier_api:$(build.buildId)'
 
 steps:
-- script: docker build -f Dockerfile -t $(imageName) .
-  displayName: 'docker build'
-
-- script: docker login -u $(dockerId) -p $(dockerPassword)
-  displayName: 'login to docker hub'
-
-- script: docker push $(dockerId)/$(imageName)
-  displayName: 'push image to docker hub'
+- script: |
+    docker build -f Dockerfile -t $(dockerId)/$(imageName) .
+    docker login -u $(dockerId) -p $pswd
+    docker push $(dockerId)/$(imageName)
+  env:
+    pswd: $(dockerPassword)
+  displayName: 'Build and push Docker image'
