--- a/classifierapi/values.yaml
+++ b/classifierapi/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: pmanlukas/classifier-api
   tag: stable
   pullPolicy: IfNotPresent
 
@@ -14,7 +14,7 @@ fullnameOverride: ""
 
 service:
   type: ClusterIP
-  port: 80
+  port: 5000
 
 ingress:
   enabled: false
